# Vortex_CLI

./: .env.example  .gitignore  GEMINI.md  MODULES_GUIDE.md  README.md  pyproject.toml  requirements.txt  vortex.bat  vortex.py  vortex.start  vortex_commands.py  vortex_completer.py  vortex_config.py  vortex_db.py
vortex/: __init__.py  cli.py  config.py  db.py  info.txt  registry.py  updater.py
vortex/config/: __init__.py  manager.py
vortex/core/: auth.py  cli.py  updater.py
vortex/database/: README.md  __init__.py  browser.py  console.py  core.py  db.py  explorer.py  schema.py
vortex/ui/: banner.py  commands.py  completer.py  pager.py  style.py
vortex/ui/engine/: README.md  __init__.py  core.py
vortex_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vortex_db_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
