[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex-cli"
version = "0.2"
description = "CLI для управление Vortex системой"
requires-python = ">=3.9"
dependencies = [
    "psycopg>=3.1.0",
    "python-dotenv>=1.0.0",
    "rich>=10.11.0",
    "prompt_toolkit>=3.0.36"
]

[project.scripts]
vortex = "vortex:main"

[tool.setuptools]
py-modules = ["vortex", "vortex_commands", "vortex_config"]
